@@ -1,4 +1,3 @@
 -Xms512m
 -Xmx2g
 -XX:+UseZGC
---enable-preview
